Add an additional scroll down attempt after making a view visible.  The geometry of the khtmlview is incorrect before it has been shown, so any previous scrolldowns are ineffective.

BUG:95362

svn path=/trunk/kdenetwork/kopete/; revision=378421